[package]
name = "linear_search_trie"
authors = ["daibo83 <daibo031983@gmail.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2018"
description = "simple array backed trie, using linear search to traverse nodes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
